# arxiv-sanity-preserver

./: CLI_FLAGS.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  buildsvm.py  download_pdfs.py  fetch_papers.py  ingest_single_paper.py  make_cache.py  parse_pdf_to_text.py  pipeline_config.json  repo_metadata.py  requirements.txt  roadmap.txt  schema.sql  serve.py  thumb_pdf.py  twitter_daemon.py  utils.py
docs/: cli.md  rust-cli.md
flask_limiter/: __init__.py
src/: cache.rs  compile.txt  config.rs  db.rs  download.rs  hnsw_index.rs  ingest.rs  lib.rs  main.rs  migrate.rs  serve.rs  twitter.rs  utils.rs
src/models/: mod.rs
static/: as-common.js  style.css
templates/: about.html  account.html  base.html  discuss.html  help.html  home.html  layout_toolbar.html  library.html  main.html  main_PY_version.html  main__.html  settings_modal.html  sidebar_filters.html
tests/: test_github_links.py  test_publication_statuses.py
