[package]
name = "arxiv_sanity_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
feed-rs = "1.4.0"
glob = "0.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.12.0"
wait-timeout = "0.2.0"
which = "6.0.3"
bincode = "1.3.3"
once_cell = "1.19.0"
regex = "1.10.6"
rusqlite = { version = "0.31.0", features = ["bundled"] }
smartcore = { version = "0.3.2", default-features = false, features = ["serde"] }
stop-words = "0.8.0"
axum = "0.7.6"
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
hnsw_rs = { version = "0.3.1" }
minijinja = { version = "1.0.21", features = ["loader"] }
serde-pickle = "1.1.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["fs"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
